- take linear discriminant analysis from experimental